# aiogram3-docker-template

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi/: Dockerfile  pyproject.toml
nginx/: nginx_config.conf
telegram_bot/: Dockerfile  __main__.py  main.py  pyproject.toml
telegram_bot/connections/: base.py
telegram_bot/connections/api/: ping.py
telegram_bot/data/: config.py
telegram_bot/db/db_api/storages/: postgres.py
telegram_bot/handlers/user/: __init__.py  ping.py  start.py
telegram_bot/models/: base.py
telegram_bot/utils/: connect_to_services.py  logging.py
telegram_bot/web_handlers/: tg_updates.py
