[tool.poetry]
name = "aiogram3-docker-template"
version = "0.1.0"
description = ""
authors = ["alexturkin <alexturkinjob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
environs = "^11.0.0"
asyncpg = "^0.29.0"
structlog = "^24.2.0"
aiogram = "^3.8.0"
redis = "^5.0.7"
tenacity = "^8.4.2"
aiojobs = "^1.2.1"
backoff = "^2.2.1"
fake-useragent = "^1.5.1"
ujson = "^5.10.0"
aiohttp = "^3.9.5"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
